refactor(reme_ai): remove unused PDF processing components
- Remove MinerUPDFProcessor and related classes
- Delete pdf_preprocess_op_wrapper.py
- Update task_summary_ops.md to remove PDFPreprocessOp documentation
- Add LLM-related keywords to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+keywords = ["llm", "memory", "experience", "memoryscope", "ai", "mcp", "http"]
+
 dependencies = [
     "flowllm>=0.1.3",
 ]
