--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ cookbook/appworld/experiments/*
 cookbook/appworld/exp_result/*
 file_vector_store/*
 cookbook/appworld/file_vector_store/*
+/.venv/
