refactor(reme_ai): update app and ops for async execution and new LLM features
- Update app.py to use async service initialization
- Refactor multiple ops to use async_execute instead of execute
- Add support for stream and use_async flags in config
- Update LLM usage to use achat instead of chat
- Add new LLM models and update existing ones in config
- Improve error handling and logging in several ops
- Update dependencies and Python version requirements

--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -1,4 +1,3 @@
-# default config.yaml
 backend: http
 language: ""
 thread_pool_max_workers: 32
@@ -18,6 +17,9 @@ http:
 flow:
   retrieve_task_memory:
     flow_content: build_query_op >> recall_vector_store_op >> rerank_memory_op >> rewrite_memory_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Retrieves the most relevant top-k memory experiences from historical data based on the current query to enhance task-solving capabilities"
     input_schema:
       query:
@@ -27,6 +29,9 @@ flow:
 
   summary_task_memory:
     flow_content: trajectory_preprocess_op >> (success_extraction_op|failure_extraction_op|comparative_extraction_op) >> memory_validation_op >> update_vector_store_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Summarizes conversation trajectories or messages into structured memory representations for long-term storage"
     input_schema:
       trajectories:
@@ -36,6 +41,9 @@ flow:
 
   retrieve_personal_memory:
     flow_content: set_query_op >> (extract_time_op | (retrieve_memory_op >> semantic_rank_op)) >> fuse_rerank_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Retrieves the most relevant personal memories from historical data based on the query to enhance response quality"
     input_schema:
       query:
@@ -45,6 +53,9 @@ flow:
 
   summary_personal_memory:
     flow_content: info_filter_op >> (get_observation_op | get_observation_with_time_op | load_today_memory_op) >> contra_repeat_op >> update_vector_store_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Consolidates user observations and memories by filtering information and removing redundancies for efficient storage"
     input_schema:
       trajectories:
@@ -54,6 +65,9 @@ flow:
 
   retrieve_task_memory_simple:
     flow_content: build_query_op >> recall_vector_store_op >> merge_memory_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Retrieves the most relevant top-k memory experiences from historical data based on the current query with simplified processing"
     input_schema:
       query:
@@ -63,6 +77,9 @@ flow:
 
   summary_task_memory_simple:
     flow_content: simple_summary_op >> update_vector_store_op
+    stream: false
+    use_async: true
+    service_type: http+mcp
     description: "Summarizes conversation trajectories or messages into memories using a simplified approach"
     input_schema:
       trajectories:
@@ -72,6 +89,9 @@ flow:
 
   vector_store:
     flow_content: vector_store_action_op
+    stream: false
+    use_async: false
+    service_type: http+mcp
     description: "Directly operates on the vector store with various management actions"
     input_schema:
       action:
@@ -142,10 +162,17 @@ op:
 llm:
   default:
     backend: openai_compatible
-    #    model_name: qwen3-30b-a3b-thinking-2507
     model_name: qwen3-30b-a3b-instruct-2507
     params:
       temperature: 0.6
+
+  qwen3_30b_instruct:
+    backend: openai_compatible
+    model_name: qwen3-30b-a3b-instruct-2507
+
+  qwen3_30b_thinking:
+    backend: openai_compatible
+    model_name: qwen3-30b-a3b-thinking-2507
 
 embedding_model:
   default:
