refactor(demo): update personal memory demo and remove unused files
- Update personal memory demo to use new memory format
- Remove unused task memory and message files
- Adjust vector store configuration in default.yaml
- Modify load_today_memory_op to use new search method

--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -183,8 +183,7 @@ embedding_model:
 
 vector_store:
   default:
-    backend: elasticsearch
+    backend: memory
     embedding_model: default
 #    params:
 #      hosts: "http://localhost:9200"
-#      hosts: "http://11.160.132.46:8200"
