reformat code, support flowllm 0.1.9

--- a/example.env
+++ b/example.env
@@ -1,9 +1,8 @@
+FLOW_APP_NAME=ReMe
 FLOW_EMBEDDING_API_KEY=sk-xxxx
 FLOW_EMBEDDING_BASE_URL=https://xxxx/v1
-
 FLOW_LLM_API_KEY=sk-xxxx
 FLOW_LLM_BASE_URL=https://xxxx/v1
 
-FLOW_ES_HOSTS=http://0.0.0.0:9200
-
-FLOW_USE_FRAMEWORK=true
+# FLOW_ES_HOSTS=http://0.0.0.0:9200
+# FLOW_DASHSCOPE_API_KEY=sk-xxx
