fix(app): update flowllm dependency and add environment variable check
- Update flowllm dependency to version 0.1.9
- Add environment variable check for FLOW_APP_NAME

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 keywords = ["llm", "memory", "experience", "memoryscope", "ai", "mcp", "http"]
 
 dependencies = [
-    "flowllm>=0.1.9",
+    "flowllm==0.1.9",
 ]
 
 [tool.setuptools.packages.find]
