feat(tool): implement tool memory management and mock search tools- Added RetrieveToolMemoryOp for retrieving tool memory guidelines- Implemented LLM-based mock search tools with configurable complexity levels - Enhanced tool call result parsing with improved scoring logic (0.0 or 1.0) - Updated tool memory schema to reflect binary success/failure scoring - Added deterministic behavior support via seed configuration in mock tools - Improved evaluation prompts to focus on result quality over success flags - Extended README with tool memory documentation and usage examples- Added utility functions for generating mock tool call results - Removed deprecated test file for UseMockSearchOp- Updated default configurations to include use_mock_search operation- Bumped version to0.1.10 and updated flowllm dependency requirement - Moved deprecation warnings to main init file - Simplified tool memory summary formatting by removing redundant statistics - Fixed tool call result processing to handle multiple tool names concurrently

--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -62,10 +62,6 @@ flow:
     flow_content: parse_tool_call_result_op >> update_vector_store_op
     description: "Evaluates and adds tool call results to the tool memory database, creating new memory or updating existing memory for the specified tool"
     input_schema:
-      tool_name:
-        type: string
-        description: "The name of the tool to add call results for"
-        required: true
       tool_call_results:
         type: array
         description: "List of tool call result objects, each containing: tool_name, input, output, success, time_cost, token_cost, create_time"
@@ -79,6 +75,15 @@ flow:
         type: string
         description: "Comma-separated tool names to summarize (e.g., 'tool_name1,tool_name2')"
         required: true
+
+  use_mock_search:
+    flow_content: use_mock_search_op
+    description: "Simulates intelligent search tool selection and execution based on query complexity, with automatic tool memory recording"
+    input_schema:
+      query:
+        type: string
+        description: "User search query to process"
+        required: true 
 
   summary_task_memory_simple:
     flow_content: simple_summary_op >> update_vector_store_op
