feat(docs): add tool memory documentation and update ReMe memory model
- Introduce tool memory as a new memory type in ReMe framework
- Update agent memory formula to include tool memory- Add comprehensive tool memory documentation with usage examples
- Include tool memory API usage guides for Python, curl, and Node.js
- Add tool memory benchmark results showing 14.88% improvement- Create new tool memory demo and benchmark resources
- Update documentation structure to reflect three memory capabilities- Add TODO list with planned features including automatic tool exploration- Fix mermaid diagram numbering in tool memory documentation
- Remove outdated latest updates section from main documentation
- Update resource links to include tool memory references

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
       - BFCL: cookbook/bfcl/quickstart.md
       - FrozenLake: cookbook/frozenlake/quickstart.md
 
+  - TODO: todo.md
 
   - Contributions: contribution.md
 
