docs(docs): rename todo.md to future_work.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,8 @@ nav:
       - BFCL: cookbook/bfcl/quickstart.md
       - FrozenLake: cookbook/frozenlake/quickstart.md
 
-  - TODO: todo.md
+  - Future Work:
+      - future_work.md
 
   - Contribution Guide: contribution.md
 
