--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 project: "ReMe"
-title: "<span style='font-weight: 700; color: #2196f3;'>AgentScope</span> <br><span style='font-weight: 900; color: #ff5722;'>ReMe</span>"
+title: "<span style='font-weight: 700; color: #2196f3;'>ReMe</span> <br><span style='font-weight: 900; color: #ff5722;'></span>"
 author: Alibaba Tongyi Lab
 logo: _static/figure/reme_logo.png
 copyright: "2025, Tongyi Lab, Alibaba Inc."
