docs: update documentation structure and content

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,9 @@ execute:
 parse:
   myst_enable_extensions:
     - colon_fence
+    - deflist
+    - attrs_inline
+    - dollarmath
 
 # Define the name of the latex output file for PDF builds
 latex:
